# Deep_Learning_Exercises

./: .gitignore  main.py  pyproject.toml  readme.md  uv-cheatsheet.md
hoofdstuk-10/praktische-vragen/: Programming_Exercises_Chapter_10.ipynb
hoofdstuk-13/: 13_loading_and_preprocessing_data_with_tensorflow_starter.ipynb  Chapter_13_Exercise_1_Starter.ipynb
hoofdstuk-14-praktische-vragen/: Programming_Exercises_Chapter_14.ipynb
hoofdstuk-14-theoretische-vragen/: hoofdstuk-14-theoretische-vragen.ipynb
hoofdstuk-14/praktische-vragen/: Programming_Exercises_Chapter_14.ipynb
hoofdstuk-15/: 15_processing_sequences_using_rnns_and_cnns_1_(2).ipynb
hoofdstuk-15/praktrische-vragen/: chapter_15_util_window_starter_(2).ipynb
hoofdstuk-15/theoretische-vragen/: 15_processing_sequences_using_rnns_and_cnns_1_(2).ipynb
hoofdstuk-16/praktrische-vragen/: chapter_16_sentiment_classification_Part_1_starter_(1).ipynb  hoofdstuk-16-programmeeroefeningen.ipynb  hoofdstuk_16-prommeeroef_encoder-decoder.ipynb
hoofdstuk-einsum/: 99_einops_functions_examples.ipynb  einops_programmeeroefeningen.ipynb  notebook.ipynb
hoofstuk-14/praktische-vragen/: Programming_Exercises_Chapter_14.ipynb
voorbeeldexamen/: voorbeeldexamen-oefeningen.ipynb
voorbeeldexamen/praktijk-vragen/: hdf-14.ipynb  hfd-10.ipynb  hfd-13.ipynb  hfd-15.ipynb  hfd-16.ipynb
voorbeeldexamen/theorie-vragen/: hfd-10.ipynb  hfd-13.ipynb  hfd-14_cnn_classificatie.psd  hfd-16.ipynb
