[project]
name = "deep-learning-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.0",
    "keras>=3.12.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.16.2",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
]
